update code responsive

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <title>Baneste Codes - Desarrollo de Software a la Medida</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/jpeg" href="assets/banesteCodesIcon.jpeg" />
-    <link rel="apple-touch-icon" href="assets/banesteCodesIcon.jpeg" />
+    <link rel="icon" type="image/x-icon" href="assets/baneste.ico" />
+    <link rel="apple-touch-icon" href="assets/baneste1.png" />
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -68,7 +68,6 @@
       <div class="container navbar-container">
         <a href="#inicio" class="navbar-logo">
           <img src="assets/baneste.png" alt="Baneste Codes Logo" />
-          <span>Baneste Codes</span>
         </a>
 
         <button
@@ -99,6 +98,20 @@
     <section id="inicio" class="hero-section">
       <div class="hero-background"></div>
       <div class="hero-overlay"></div>
+      
+      <!-- Partículas animadas -->
+      <div class="hero-particles">
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+      </div>
 
       <div class="container hero-content">
         <div class="hero-text">
@@ -140,22 +153,6 @@
               Ver Proyectos
             </a>
           </div>
-        </div>
-
-        <div class="hero-scroll animate-pulse">
-          <svg
-            class="icon"
-            fill="none"
-            stroke="currentColor"
-            viewBox="0 0 24 24"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              d="M19 14l-7 7m0 0l-7-7m7 7V3"
-            />
-          </svg>
         </div>
       </div>
     </section>
