--- a/privacy.html
+++ b/privacy.html
@@ -7,7 +7,7 @@
     <title>Políticas de Privacidad - Baneste Codes</title>
     
     <!-- Favicon -->
-    <link rel="icon" type="image/jpeg" href="assets/banesteCodesIcon.jpeg">
+    <link rel="icon" type="image/jpeg" href="assets/baneste1.png">
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
