update code responsive

--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Políticas de Privacidad - Baneste Codes">
+    <meta name="description" content="Política de privacidad de Baneste Codes. Conoce cómo protegemos tus datos y derechos personales. Desarrollo de software transparente en Florencia, Colombia.">
+    
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://banestecodes.com/privacy.html" />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="Políticas de Privacidad - Baneste Codes" />
+    <meta property="og:description" content="Conoce nuestra política de tratamiento de datos y privacidad." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://banestecodes.com/privacy.html" />
+    <meta property="og:image" content="https://banestecodes.com/assets/baneste.png" />
+
     <title>Políticas de Privacidad - Baneste Codes</title>
     
     <!-- Favicon -->
