--- a/index.html
+++ b/index.html
@@ -2,19 +2,28 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes, viewport-fit=cover" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes, viewport-fit=cover"
+    />
     <meta
       name="description"
-      content="Baneste Codes - Desarrollo de software a la medida. Buscando el camino perfecto hacia aplicaciones móviles excepcionales."
+      content="Baneste Codes - Expertos en desarrollo de software a medida, aplicaciones móviles Flutter, desarrollo web y automatización con n8n en Florencia, Colombia. Transformamos tu negocio."
     />
     <meta
       name="keywords"
-      content="desarrollo software, aplicaciones móviles, Flutter, automatización, n8n, software a medida"
+      content="desarrollo software, aplicaciones móviles, Flutter, desarrollo web, automatización, n8n, software a medida, Florencia, Colombia, apps android, apps ios"
     />
     <meta name="author" content="Baneste Codes" />
     <meta name="theme-color" content="#1a8b9d" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://banestecodes.com/" />
 
     <!-- Open Graph -->
     <meta
@@ -23,10 +32,42 @@
     />
     <meta
       property="og:description"
-      content="Transformamos ideas en soluciones de software innovadoras, escalables y de alto rendimiento."
+      content="Transformamos ideas en soluciones de software innovadoras, escalables y de alto rendimiento. Especialistas en Flutter y Automatización."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://banestecodes.com" />
+    <meta property="og:url" content="https://banestecodes.com/" />
+    <meta
+      property="og:image"
+      content="https://banestecodes.com/assets/baneste.png"
+    />
+    <meta property="og:site_name" content="Baneste Codes" />
+    <meta property="og:locale" content="es_CO" />
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Baneste Codes",
+        "image": "https://banestecodes.com/assets/baneste.png",
+        "@id": "https://banestecodes.com",
+        "url": "https://banestecodes.com",
+        "telephone": "+573208806654",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Florencia",
+          "addressRegion": "Caquetá",
+          "addressCountry": "CO"
+        },
+        "sameAs": [
+          "https://instagram.com/banesteCodes",
+          "https://twitter.com/banesteCodes",
+          "https://linkedin.com/company/banesteCodes",
+          "https://github.com/banesteCodes"
+        ],
+        "priceRange": "$$"
+      }
+    </script>
 
     <title>Baneste Codes - Desarrollo de Software a la Medida</title>
 
@@ -98,7 +139,7 @@
     <section id="inicio" class="hero-section">
       <div class="hero-background"></div>
       <div class="hero-overlay"></div>
-      
+
       <!-- Partículas animadas -->
       <div class="hero-particles">
         <div class="particle"></div>
@@ -645,17 +686,26 @@
          ============================================ -->
     <footer class="footer">
       <div class="container">
+        <div class="footer-slogan">
+          <p>
+            Transformando ideas en soluciones de software innovadoras desde
+            2025.
+          </p>
+        </div>
+
         <div class="footer-content">
           <div class="footer-section">
-            <h4>Baneste Codes</h4>
-            <p>
-              Transformando ideas en soluciones de software innovadoras desde
-              2025.
+            <a href="#inicio" class="footer-brand">
+              <img src="assets/baneste.png" alt="Baneste Codes" class="footer-logo">
+            </a>
+            <p class="footer-description">
+              Soluciones de desarrollo de software a medida para empresas de
+              todos los tamaños.
             </p>
           </div>
 
           <div class="footer-section">
-            <h4>Enlaces Rápidos</h4>
+            <h4>Navegación</h4>
             <ul class="footer-links">
               <li><a href="#inicio">Inicio</a></li>
               <li><a href="#nosotros">Nosotros</a></li>
@@ -675,10 +725,20 @@
           </div>
 
           <div class="footer-section">
-            <h4>Legal</h4>
-            <ul class="footer-links">
-              <li><a href="privacy.html">Políticas de Privacidad</a></li>
-              <li><a href="privacy.html#terms">Términos y Condiciones</a></li>
+            <h4>Contacto</h4>
+            <ul class="footer-links footer-contact-list">
+              <li>
+                <span class="contact-icon-small">📍</span>
+                <span>Florencia, Caquetá, Colombia</span>
+              </li>
+              <li>
+                <span class="contact-icon-small">📧</span>
+                <a href="mailto:banestecodes@gmail.com">banestecodes@gmail.com</a>
+              </li>
+              <li>
+                <span class="contact-icon-small">📞</span>
+                <a href="tel:+573208806654">+57 320 880 6654</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -694,15 +754,21 @@
          ============================================ -->
     <div class="whatsapp-widget" id="whatsappWidget">
       <!-- Botón flotante -->
-      <button class="whatsapp-float" id="whatsappButton" aria-label="Abrir chat de WhatsApp">
-        <svg 
-          xmlns="http://www.w3.org/2000/svg" 
-          width="32" 
-          height="32" 
-          viewBox="0 0 24 24" 
+      <button
+        class="whatsapp-float"
+        id="whatsappButton"
+        aria-label="Abrir chat de WhatsApp"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="32"
+          height="32"
+          viewBox="0 0 24 24"
           fill="currentColor"
         >
-          <path d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.893 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414z"/>
+          <path
+            d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.893 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414z"
+          />
         </svg>
       </button>
 
@@ -712,7 +778,11 @@
         <div class="whatsapp-header">
           <div class="whatsapp-header-content">
             <div class="whatsapp-avatar-container">
-               <img src="assets/baneste.jpg" alt="Baneste Codes" class="whatsapp-avatar" />
+              <img
+                src="assets/baneste.jpg"
+                alt="Baneste Codes"
+                class="whatsapp-avatar"
+              />
             </div>
             <div class="whatsapp-header-text">
               <h4>Baneste Codes</h4>
@@ -722,9 +792,24 @@
               </span>
             </div>
           </div>
-          <button class="whatsapp-close" id="whatsappClose" aria-label="Cerrar chat">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/>
+          <button
+            class="whatsapp-close"
+            id="whatsappClose"
+            aria-label="Cerrar chat"
+          >
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M6 18L18 6M6 6l12 12"
+              />
             </svg>
           </button>
         </div>
@@ -748,9 +833,24 @@
             placeholder="Enviar mensaje..."
             maxlength="500"
           />
-          <button class="whatsapp-send" id="whatsappSend" aria-label="Enviar mensaje">
-            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8"/>
+          <button
+            class="whatsapp-send"
+            id="whatsappSend"
+            aria-label="Enviar mensaje"
+          >
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8"
+              />
             </svg>
           </button>
         </div>
